[package]
name = "phenix-runtime"
version = "0.1.0"
edition = "2021"

[features]
default = ["serde"]

serde = ["dep:serde"]

[dependencies]
phenix-runtime-macros = { path = "./macros"}

serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
proptest = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
